feat: add operator internal context
